--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,42 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bem-vindo, @User.Identity.Name!</h1>
+    <p>Bem-vindo ao sistema de gerenciamento de endereços.</p>
+</div>
+
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h5 class="card-title">Meu Perfil</h5>
+                    <p class="card-text">Visualize e edite seus dados pessoais.</p>
+                    <a asp-controller="Usuario" asp-action="Index" class="btn btn-primary">Acessar Perfil</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h5 class="card-title">Meus Endereços</h5>
+                    <p class="card-text">Gerencie seus endereços cadastrados.</p>
+                    <a asp-controller="Endereco" asp-action="Index" class="btn btn-primary">Gerenciar Endereços</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h5 class="card-title">Sair</h5>
+                    <p class="card-text">Encerrar sua sessão no sistema.</p>
+                    <a asp-controller="Login" asp-action="Logout" class="btn btn-danger">Logout</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
